--- a/journal/202012.md
+++ b/journal/202012.md
@@ -237,7 +237,7 @@ Monde PR's achievements for December:
 News coverage secured by Monde PR:
 
 - @jy-p was interviewed by [NASDAQ Trade Talks](https://www.nasdaq.com/videos/tradetalks:-how-can-blockchain-can-be-used-in-elections) talking about Decred's use in Brazil's election. The interview was mentioned in subsequent articles in [Coin Journal](https://coinjournal.net/news/decred-bounces-off-42-after-spiking-50/), [Crypto Potato](https://cryptopotato.com/decred-dcr-pumps-50-as-social-sentiment-surges/), [Coin Market Cap](https://coinmarketcap.com/headlines/signals/decred-co-founder-on-nasdaq-tradetalks-decred/) and [CryptoMode](https://cryptomode.com/5-reasons-why-you-shouldnt-overlook-decred-dcr/)
-- details of the DCR launch and Decred's use in Brazil's election were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
+- details of the DCRDEX launch and Decred's use in Brazil's election were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
 - @jy-p was interviewed by the [Geek Insider Podcast](https://www.youtube.com/watch?v=mYK_Awn1wTk) talking about the origin of Decred, the DCRDEX launch and Decred's use in Brazil's election
 - details of the DCRDEX launch were also featured in [Brave New Coin](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)
 - comments from @jy-p's Cointelegraph interview about Bitcoin bull and bear cycles were featured in [Forex Academy](https://www.forex.academy/how-to-spot-bitcoin-bull-bear-cycles-beginners-edition/) and [Inside Bitcoin](https://insidebitcoins.com/news/bitcoin-btc-price-prediction-november-29-2020-2)
@@ -248,15 +248,15 @@ News coverage secured by Monde PR:
 Attended:
 
 - Dec 3 - [Hablemos Decred 24](https://decredcommunity.github.io/events/index/20201203.1) - Internet. @elian and @pablito discussed how private cryptocurrencies are.
-- Dec 5 - [World Blockchain Conference](https://decredcommunity.github.io/events/index/20201205.1) - Wuhan, China. There was no formal "event" but @Dominic met with old friends at Cobo Wallet, F2Pool and others, to introduce them to the upcoming v1.6 and new consensus rules.
-- Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Most of the Decred in Spanish team reviewed 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
+- Dec 5 - [World Blockchain Conference](https://decredcommunity.github.io/events/index/20201205.1) - Wuhan, China. There was no formal Decred event but @Dominic met with old friends at Cobo Wallet, F2Pool and others, to introduce them to the upcoming v1.6 and new consensus rules.
+- Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Decred in Spanish team gathered to reviewe 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
 - Dec 11 - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - Internet. Co-organized by Paxful Latam. Decred was a VIP sponsor. @elian presented common talking points of Decred and the upcoming Hidden Hydra, which got 1.6K views on Facebook and ~800 on YouTube. In another panel he talked about how to prevent crypto scams.
 - Dec 16 - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - Mexico City, Mexico. @adcade talked about Decred's organization and Politeia at Aula Multimedia lab of the UAM Xochimilco university.
 - Dec 18 - [New Year at CR!](https://decredcommunity.github.io/events/index/20201218.1) - Internet. Crypto Resources Academy organized a year-end event and invited partners like Decred, Bitso, Prime XBT DAI, Binance, and others. During the governance panel @elian presented how Decred governance works, the role of Politeia and the decentralization of the Treasury.
-- Dec 24 - [Decred AMA](https://decredcommunity.github.io/events/index/20201224.1) - Internet. This AMA for OKEx in Spanish community took place on their [Telegram](https://t.me/OKExLATAM) with ~500 users. Over 30 questions were asked about Decred's governance, privacy, future developments, history and the DEX. There was also a DCR giveaway ($20 from OKEx and $30 from Decred in Spanish). Over 30 new members joined [@DecredES](https://t.me/DecredES) TG.
-- Dec 30 - [Decred in Spanish New Year Giveaway](https://decredcommunity.github.io/events/index/20201230.1) - Internet. To participate, people needed to join @DecredES Telegram and tell what they like about Decred. Out of 28 commenters, 9 best were selected based on the knowledge and understanding of the project and received 3 DCR in total.
+- Dec 24 - [Decred AMA](https://decredcommunity.github.io/events/index/20201224.1) - Internet. This AMA for OKEx in Spanish community took place on their [Telegram](https://t.me/OKExLATAM) with ~500 users. Over 30 questions were asked about Decred's governance, privacy, future developments, history and the DEX. There was also a DCR giveaway ($20 from OKEx and $30 from Decred in Spanish). Over 30 new members joined [@DecredES](https://t.me/DecredES) channel.
+- Dec 30 - [Decred in Spanish New Year Giveaway](https://decredcommunity.github.io/events/index/20201230.1) - Internet. To participate, people needed to join @DecredES Telegram and tell what they like about Decred. Out of 28 comments, 9 best were selected based on the knowledge and understanding of the project and received 3 DCR in total.
 
-Thanks to everyone [submitting](https://github.com/decredcommunity/events/blob/master/docs/submit-index.md) and reviewing events for our [events tracker](https://decredcommunity.github.io/events/index/). This helps to accumulate knowledge about what works and improve reporting.
+The information above is available in greater detail in our [events tracker](https://decredcommunity.github.io/events/index/) that is being built to learn what works and improve reporting of marketing efforts. Thanks to everyone [submitting](https://github.com/decredcommunity/events/blob/master/docs/submit-index.md) and reviewing events.
 
 ## Media
 
@@ -266,7 +266,7 @@ Thanks to everyone [submitting](https://github.com/decredcommunity/events/blob/m
 - [part 2](https://stakey.club/en/blockchain-gov-part2/) covers the technology behind cryptocurrencies, Proof-of-Work security, incentives and inflation
 - [part 3](https://stakey.club/en/blockchain-gov-part3/) explains basic architecture types (permissionless/permissioned, public/private), Bitcoin governance, privacy and fungibility, and applications of blockchain beyond digital money (esp. e-voting)
 - [part 4](https://stakey.club/en/blockchain-gov-part4/) introduces Decred Project fundamentals (security, consensus, funding, skin in the game) and compares it to pure PoW and PoS approaches
-- [part 5](https://stakey.club/en/blockchain-gov-part5/) assesses blockchain security and governance of Bitcoin vs Decred using @mm's [InvalidationGame](https://github.com/mmartins000/invalidationgame) attack simulator, considering external and internal attacks
+- [part 5](https://stakey.club/en/blockchain-gov-part5/) assesses blockchain security and governance of Bitcoin vs Decred using @mm's [InvalidationGame](https://github.com/mmartins000/invalidationgame) attack simulator, considering external and internal attacks. Among other details, it provides separate estimates for capex and opex required for attacking Bitcoin and Decred.
 - [part 6](https://stakey.club/en/blockchain-gov-part6/) tests a number of hypotheses against real data (topics include correlation of on-chain metrics with price, voter turnout, OLS model, and more)
 - [part 7](https://stakey.club/en/blockchain-gov-part7/) concludes the series by summarizing simulation results, findings on security, and what Decred can offer to the world
 
@@ -276,18 +276,18 @@ Code in Python/R/SQL used in the research is available on [GitHub](https://githu
 
 Selected articles:
 
-- Decred price analysis - Active addresses hit all-time highs as trend metrics flip bullish by Josh Olszewicz ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)) - with a [video](https://www.youtube.com/watch?v=oCYZS_qJ7us)
+- Decred price analysis - Active addresses hit all-time highs as trend metrics flip bullish by Josh Olszewicz ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)) - comes with a [video](https://www.youtube.com/watch?v=oCYZS_qJ7us) version
 
 Videos:
 
-- Decred bi-Weekly news update - Privacy page revamped, lots of dev updates, 1.6 inbound, and more! by @Exitus ([youtube](https://www.youtube.com/watch?v=-3s9_jMWNuA))
+- Decred bi-weekly news update - Privacy page revamped, lots of dev updates, 1.6 inbound, and more! by @Exitus ([youtube](https://www.youtube.com/watch?v=-3s9_jMWNuA))
 - New yearly high for Decred by Decred Society ([youtube](https://www.youtube.com/watch?v=qw-ohbTObeo))
 - Decred is ideal for savers by Decred Society ([youtube](https://www.youtube.com/watch?v=zYDT0n59C7k))
 - Decred crypto analysis - King DCR AWAKENS! Every action has an equal and opposite reaction! by DubDigital ([youtube](https://www.youtube.com/watch?v=kqAD_PSgyME))
-- Jake Yocom-Piatt talks Decred and blockchain by Geek Insider ([youtube](https://www.youtube.com/watch?v=mYK_Awn1wTk))
-- How can blockchain can be used in elections? by Jill Malandrino of NASDAQ TradeTalks ([youtube](https://www.youtube.com/watch?v=pBSn_CdQYts)) - with Jake Yocom-Piatt
+- Jake Yocom-Piatt talks Decred and blockchain at Geek Insider ([youtube](https://www.youtube.com/watch?v=mYK_Awn1wTk))
+- How can blockchain can be used in elections? with Jake Yocom-Piatt and Jill Malandrino of NASDAQ TradeTalks ([youtube](https://www.youtube.com/watch?v=pBSn_CdQYts))
 - Staked Podcast: Episode 0.0.5 ([youtube](https://www.youtube.com/watch?v=BbBcngzuxCw)) - update on the state of the podcast and an announcement regarding Eduardo and Decred
-- Interview with BTC Uncle (@BTC\_Uncle) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=__7LTz3nQKk), short [clip](https://www.youtube.com/watch?v=3ubS_27FEhE) on why Decred)
+- Interview with @BTC\_Uncle by Staked Podcast ([youtube](https://www.youtube.com/watch?v=__7LTz3nQKk), short [clip](https://www.youtube.com/watch?v=3ubS_27FEhE) on why Decred)
 - Interview with Ammar Naseer (@Ammarooni) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=g0bFMuHXrkU))
 - 2020 onchain close out session BTC + DCR by @Checkmate ([youtube](https://www.youtube.com/watch?v=g60ovCl54OA))
 - Decred Deep Dive: Hidden hydra release is incoming! by @Checkmate ([youtube](https://www.youtube.com/watch?v=3AxBa-EE8RM), [discussion](https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/))
@@ -295,17 +295,17 @@ Videos:
 Audio:
 
 - Rough Consensus 14: Rehashing bull market happenings. @Checkmate and @PermabullNino share their thoughts on Bitcoin ATHs, ETH 2.0, DCR 1.6, and more. ([libsyn](https://roughconsensus.libsyn.com/episode-14-rehashing-bull-market-happenings))
-- Rough Consensus 15: The next paradigm with Mav. Mav from Ready Set Crypto hops on the pod to talk big picture crypto. ([libsyn](https://roughconsensus.libsyn.com/episode-15-the-next-paradigm-with-mav-ready-set-crypto))
+- Rough Consensus 15: The next paradigm. Mav from Ready Set Crypto hops on the pod to talk big picture crypto. ([libsyn](https://roughconsensus.libsyn.com/episode-15-the-next-paradigm-with-mav-ready-set-crypto))
 
 Art/fun:
 
 - hilarious Decred [GOT cover](https://streamable.com/iam635) by @degeri
 - "They [don't know](https://twitter.com/aithzakaria1/status/1335706207395450880) I have Decred" by @aithzakaria1
 - it's [time](https://twitter.com/aithzakaria1/status/1330999761634258948) for Decred, Ben! by @aithzakaria1
-- survival through adaptation [merch](https://twitter.com/OfficialCryptos/status/1338551937818562561) design by @OfficialCryptos
-- DCR [cleaning up CMC](https://twitter.com/exitusdcr/status/1343774006344880130) by @Exitus
+- survival through adaptation - [merch](https://twitter.com/OfficialCryptos/status/1338551937818562561) design by @OfficialCryptos
+- DCR violently [cutting through CMC](https://twitter.com/exitusdcr/status/1343774006344880130) by @Exitus
 - [Digital Nation State](https://twitter.com/AGNFAB1/status/1338963085537718275) by @AGNFAB
-- @New\_Copernicus shared another [Hidden Hydra](https://twitter.com/New_Copernicus/status/1336044535370092546) teaser, down the [Decred Rabbit Hole](https://twitter.com/New_Copernicus/status/1339649654842126337), cheerful [Happy Holidays!](https://twitter.com/New_Copernicus/status/1341665478935076865) and [Happy New Year!](https://twitter.com/New_Copernicus/status/1344509258176622593)
+- @New\_Copernicus shared more teaser clips on [Hidden Hydra](https://twitter.com/New_Copernicus/status/1336044535370092546), [Decred Rabbit Hole](https://twitter.com/New_Copernicus/status/1339649654842126337), cheerful [Happy Holidays!](https://twitter.com/New_Copernicus/status/1341665478935076865) and [Happy New Year!](https://twitter.com/New_Copernicus/status/1344509258176622593)
 
 Translations:
 
@@ -330,16 +330,16 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- @Ammarooni reminds that December 15 marked [5th anniversary](https://twitter.com/Ammarooni/status/1338898342722605057) of Decred's first [announcement](https://bitcointalk.org/index.php?topic=1290358.0) on bitcointalk forum
+- @Ammarooni reminds that December 15 marked the [5th anniversary](https://twitter.com/Ammarooni/status/1338898342722605057) of Decred's first [announcement](https://bitcointalk.org/index.php?topic=1290358.0) on bitcointalk forum
 - short [history](https://twitter.com/lefebvre_dustin/status/1333816694922485761) how Decred coded on regardless of the oracles, by @Dustorf
 
 ## Markets
 
-In December DCR was trading between USD 24.01-41.59 / BTC 0.0012-0.002. The average daily rate was $31.07.
+In December DCR was trading between USD 24.01-41.59 / BTC 0.0012-0.0020. The average daily rate was $31.07.
 
-With the massive bitcoin runup, Decred has also been raising in USD without losing much ground in BTC value.
+With the massive Bitcoin runup, Decred has also been raising in USD without losing much ground in BTC value.
 
-DCR was trading [unusually](https://twitter.com/exitusdcr/status/1339876661131677700) [high](https://www.reddit.com/r/decred/comments/kfu4sb/whats_going_on_in_korea_upbit/) on Upbit (up to $350) up until it was delisted.
+DCR was trading [unusually](https://www.reddit.com/r/decred/comments/kfu4sb/whats_going_on_in_korea_upbit/) high up to $350 on Upbit until it was delisted there.
 
 During the 48 days of DCRDEX operation it has [traded](https://ournetwork.substack.com/p/our-network-issue-50-part-2) ~600K DCR, which is 30% of Binance volume over the same period. Unlike any centralized exchange though, this volume is much more reliable and harder to cheat.
 
@@ -367,19 +367,19 @@ A bill was [introduced](https://www.coindesk.com/us-lawmakers-introduce-bill-tha
 
 The front line in crypto regulations then [shifted](https://www.coindesk.com/self-hosted-bitcoin-wallets-become-front-line-in-fight-over-crypto-regulations) to "self-hosted wallets" (i.e. any self-custodied crypto) and the degree of due diligence that exchanges are required to carry out on transactions involving these questionable entities.
 
-Bittrex announced that it will be [delisting](https://www.coindesk.com/bittrex-to-delist-privacy-coins-monero-dash-and-zcash) privacy coins Monero, Zcash and Dash on Jan 15, without stating specific reason for delisting. Around a month before that the same coins have been [delisted](https://www.coindesk.com/shapeshift-delists-privacy-coin-zcash-over-regulatory-concerns) by ShapeShift.
+Bittrex announced that it will be [delisting](https://www.coindesk.com/bittrex-to-delist-privacy-coins-monero-dash-and-zcash) privacy coins Monero, Zcash and Dash on Jan 15, without stating a specific reason. Around a month before that the same coins have been [delisted](https://www.coindesk.com/shapeshift-delists-privacy-coin-zcash-over-regulatory-concerns) by ShapeShift.
 
-Bittrex also became the eleventh exchange to [delist](https://decrypt.co/52855/even-bittrex-is-halting-trading-of-xrp) XRP, a week after US SEC charged Ripple Labs with raising $1.3 billion by selling the coin in unregistered securities sales. This shows that raising funds is a long-term systemic risk that may backfire years after the ICO.
+Bittrex also became the eleventh exchange to [delist](https://decrypt.co/52855/even-bittrex-is-halting-trading-of-xrp) XRP, a week after US SEC charged Ripple Labs with raising $1.3 billion by selling the coin in unregistered securities sales. This reminds that raising funds is a long-term systemic risk that may backfire years after the ICO.
 
 In an effort to shake off regulators, Facebook's Libra [rebranded](https://www.forbes.com/sites/jasonbrett/2020/12/02/facebooks-libra-renamed-to-diem-prior-to-stablecoin-launch) to Diem and dropped the aspiration of being backed by a basket of currencies in favor of straight USD backing.
 
 Ledger's leak of customer data, originally reported in July, has now been [dumped](https://cointelegraph.com/news/ledger-data-leak-a-simple-mistake-exposed-270k-crypto-wallet-buyers) publicly. In the original announcement Ledger stated that more detailed information such as physical address had been accessed for 9.5K customers, but it seems [now](https://www.ledger.com/message-ledgers-ceo-data-leak/) that this information was harvested for 272K customers.
 
-## Support DJ on the web
+## Support DJ on the web!
 
-We don't know what you guys did but November DJ was an anomaly. 100+ Twitter likes up from average 60, 1,1100 Medium claps up from ~300, DJ made it into the [top 10](https://medium.com/tag/decentralized-exchange/archive/2020/12) posts tagged "DEX" on Medium, good views on Publish0x, and so on.
+We don't know what you guys did but November DJ was an anomaly. 100+ Twitter likes up from average 60, 1K+ Medium claps vs regular ~300, hitting [top 10](https://medium.com/tag/decentralized-exchange/archive/2020/12) December posts tagged "DEX" on Medium, good views on Publish0x, and so on.
 
-Thank you for pressing all these buttons and please keep doing so, as it helps to bring more visibility for the best crypto project.
+Thank you for pressing all these buttons! Please keep going to bring visibility for the best cryptocurrency project.
 
 ## About This Issue
 
