--- a/journal/202012.md
+++ b/journal/202012.md
@@ -43,7 +43,7 @@ In other news, there have been commits on Dec 30 and Jan 1 but thankfully none o
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- [random coin](https://github.com/decred/dcrwallet/pull/1937) selection for paying VSP fees (this also enables to reattempt and complete some VSP ticket purchases that were always failing before)
+- [random coin](https://github.com/decred/dcrwallet/pull/1937) selection for paying VSP fees (this also enables to retry and complete some VSP ticket purchases that were always failing before)
 - fixed [unpublished](https://github.com/decred/dcrwallet/pull/1941) outputs being used for funding other transactions (occurred with VSP fees that stay in unpublished state until the ticket is submitted with the VSP)
 - code refactoring
 
@@ -111,7 +111,7 @@ Merged in dcrlibwallet shared library:
 - method to query information about connected SPV [peers](https://github.com/planetdecred/dcrlibwallet/pull/160)
 - dependency upgrades and bug fixes
 
-Note that features added to dcrlibwallet become available for consumption by dcrandroid, dcrios and godcr, assuming these apps add necessary UIs.
+Note that features added to dcrlibwallet become available for consumption by dcrandroid, dcrios and godcr, assuming these apps add necessary UI.
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
@@ -175,7 +175,7 @@ Thanks to Decred ambassadors on all platforms for raising awareness about the pr
 
 ## Governance
 
-In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 12,099 DCR and spent 7,466 DCR. Using December's daily average DCR/USD rate of $31.07, this is $376K received and $232K spent. At Octobers's average daily rate of $18.19, the USD figure billed for past work is $136K. As of Jan 5, Treasury balance is 641,260 DCR (30.2 million USD at $47.16).
+In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 12,099 DCR and spent 7,466 DCR. Using December's daily average DCR/USD rate of $31.07, this is $376K received and $232K spent. At October's average daily rate of $18.19, the USD figure billed for past work is $136K. As of Jan 5, Treasury balance is 641,260 DCR (30.2 million USD at $47.16).
 
 Two proposals were submitted and voted on in December:
 
@@ -208,9 +208,9 @@ Mainnet Lightning Network is slowly growing. Throughout 2020 there was an averag
 
 [Ultravsp](https://ultravsp.uk/) (formerly Ultrapool) and [Ubiq](https://dcrvsp.ubiqsmart.com/) VSPs have both launched mainnet instances of the new [vspd](https://github.com/decred/vspd) voting software. Their [dcrstakepool](https://github.com/decred/dcrstakepool) servers will continue running at [legacy.ultravsp.uk](https://legacy.ultravsp.uk/) and [dcr.ubiqsmart.com](https://dcr.ubiqsmart.com/), respectively.
 
-Note that Ultravsp had to migrate from ultrapool.eu to a UK domain [ultravsp.uk](https://ultravsp.uk/) due to the Brexit [domain mess](https://www.theregister.com/2021/01/05/brexit_81000_eu_domains/), and there will be no automatic redirection due to prohibitive complexity of setting it up. VSP users who recently had active tickets have been notified via email.
+Note that Ultravsp had to migrate from ultrapool.eu to a UK domain [ultravsp.uk](https://ultravsp.uk/) due to the Brexit [domain mess](https://www.theregister.com/2021/01/05/brexit_81000_eu_domains/), and there will be no automatic redirection due to prohibitive complexity of setting it up. VSP users who bought tickets recently have been notified via email.
 
-Bittrex [added](https://twitter.com/BittrexExchange/status/1341801493964308482) an [instant exchange](https://bittrex.com/instant) feature that allows to quickly buy assets with a debit card or exchange's fiat balance. DCR was reported to work.
+Bittrex [added](https://twitter.com/BittrexExchange/status/1341801493964308482) an [instant exchange](https://bittrex.com/instant) feature that allows users to quickly buy assets with a debit card or exchange's fiat balance. DCR was reported to work.
 
 Binance has enabled [margin trading](https://www.binance.com/en/support/announcement/d3614081a4254d1c815eb07e09f6cda8) for DCR/BTC and DCR/USDT, and announced a 1-week "zero-interest promotion for borrowing DCR". ([discussion](https://www.reddit.com/r/decred/comments/k8gy0d/margin_trading_for_dcr_enabled_on_binance/)) :supervillain:
 
@@ -236,9 +236,9 @@ Monde PR's achievements for December:
 
 News coverage secured by Monde PR:
 
-- @jy-p was interviewed by [NASDAQ Trade Talks](https://www.nasdaq.com/videos/tradetalks:-how-can-blockchain-can-be-used-in-elections) talking about Decred's use in Brazil's election. The interview was mentioned in subsequent articles in [Coin Journal](https://coinjournal.net/news/decred-bounces-off-42-after-spiking-50/), [Crypto Potato](https://cryptopotato.com/decred-dcr-pumps-50-as-social-sentiment-surges/), [Coin Market Cap](https://coinmarketcap.com/headlines/signals/decred-co-founder-on-nasdaq-tradetalks-decred/) and [CryptoMode](https://cryptomode.com/5-reasons-why-you-shouldnt-overlook-decred-dcr/)
-- details of the DCRDEX launch and Decred's use in Brazil's election were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
-- @jy-p was interviewed by the [Geek Insider Podcast](https://www.youtube.com/watch?v=mYK_Awn1wTk) talking about the origin of Decred, the DCRDEX launch and Decred's use in Brazil's election
+- @jy-p was interviewed by [NASDAQ Trade Talks](https://www.nasdaq.com/videos/tradetalks:-how-can-blockchain-can-be-used-in-elections) talking about Decred's use in Brazilian elections. The interview was mentioned in subsequent articles in [Coin Journal](https://coinjournal.net/news/decred-bounces-off-42-after-spiking-50/), [Crypto Potato](https://cryptopotato.com/decred-dcr-pumps-50-as-social-sentiment-surges/), [Coin Market Cap](https://coinmarketcap.com/headlines/signals/decred-co-founder-on-nasdaq-tradetalks-decred/) and [CryptoMode](https://cryptomode.com/5-reasons-why-you-shouldnt-overlook-decred-dcr/)
+- details of the DCRDEX launch and Decred's use in Brazilian elections were featured in [Cointelegraph](https://cointelegraph.com/news/bitcoin-bull-market-pulls-kusama-ksm-decred-dcr-and-qtum-price-higher)
+- @jy-p was interviewed by the [Geek Insider Podcast](https://www.youtube.com/watch?v=mYK_Awn1wTk) talking about the origin of Decred, the DCRDEX launch and Decred's use in Brazilian elections
 - details of the DCRDEX launch were also featured in [Brave New Coin](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)
 - comments from @jy-p's Cointelegraph interview about Bitcoin bull and bear cycles were featured in [Forex Academy](https://www.forex.academy/how-to-spot-bitcoin-bull-bear-cycles-beginners-edition/) and [Inside Bitcoin](https://insidebitcoins.com/news/bitcoin-btc-price-prediction-november-29-2020-2)
 - @jy-p's comments about Ledger's security challenges were featured in [The Union Journal](https://www.theunionjournal.com/ledger-cto-discusses-wallets-safety-after-multiple-security-setbacks/)
@@ -249,8 +249,8 @@ Attended:
 
 - Dec 3 - [Hablemos Decred 24](https://decredcommunity.github.io/events/index/20201203.1) - Internet. @elian and @pablito discussed how private cryptocurrencies are.
 - Dec 5 - [World Blockchain Conference](https://decredcommunity.github.io/events/index/20201205.1) - Wuhan, China. There was no formal Decred event but @Dominic met with old friends at Cobo Wallet, F2Pool and others, to introduce them to the upcoming v1.6 and new consensus rules.
-- Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Decred in Spanish team gathered to reviewe 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
-- Dec 11 - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - Internet. Co-organized by Paxful Latam. Decred was a VIP sponsor. @elian presented common talking points of Decred and the upcoming Hidden Hydra, which got 1.6K views on Facebook and ~800 on YouTube. In another panel he talked about how to prevent crypto scams.
+- Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Decred in Spanish team gathered to review 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
+- Dec 11 - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - Internet. Co-organized by Paxful Latam. Decred was a VIP sponsor. @elian presented common talking points for Decred and the upcoming Hidden Hydra, which got 1.6K views on Facebook and ~800 on YouTube. In another panel he talked about how to prevent crypto scams.
 - Dec 16 - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - Mexico City, Mexico. @adcade talked about Decred's organization and Politeia at Aula Multimedia lab of the UAM Xochimilco university.
 - Dec 18 - [New Year at CR!](https://decredcommunity.github.io/events/index/20201218.1) - Internet. Crypto Resources Academy organized a year-end event and invited partners like Decred, Bitso, Prime XBT DAI, Binance, and others. During the governance panel @elian presented how Decred governance works, the role of Politeia and the decentralization of the Treasury.
 - Dec 24 - [Decred AMA](https://decredcommunity.github.io/events/index/20201224.1) - Internet. This AMA for OKEx in Spanish community took place on their [Telegram](https://t.me/OKExLATAM) with ~500 users. Over 30 questions were asked about Decred's governance, privacy, future developments, history and the DEX. There was also a DCR giveaway ($20 from OKEx and $30 from Decred in Spanish). Over 30 new members joined [@DecredES](https://t.me/DecredES) channel.
