--- a/journal/202012.md
+++ b/journal/202012.md
@@ -8,11 +8,10 @@ Happy New Year everyone!
 
 December highlights:
 
-- { more fixing and polishing of v1.6 }
-- { on-chain metrics peaking }
-- { a bunch of marketing proposals ending December }
-- { a bunch of new listings and delistings }
-- { incredible price action of BTC and DCR }
+- After another month of polishing, v1.6 is looking very shiny indeed. Stand by for Release Candidate 5.
+- On chain metrics went wild in December, including a big jump for the ticket price to 191 DCR.
+- Social media metrics are also taking off, with @decredproject breaking through a key resistance level.
+- DCR was delisted from Upbit, causing the price to spike, and margin trading was added to several other exchanges.
 
 ## Development
 
