--- a/journal/202101.md
+++ b/journal/202101.md
@@ -120,17 +120,16 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 { interviews about people }
 
-Community stats as of {date}:
+Community stats as of Feb 1:
 
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix #general users: {} (+{})
-- Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{}), views: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+- Twitter followers: 41,801 (+481)
+- Reddit subscribers: 10,201 (+150)
+- Matrix #general users: 344 (+57)
+- Discord users: 1,917 (+194)
+- Telegram users: 2,428 (+90)
+- YouTube subscribers: 4,320 (+20), views: 169K (+4K)
+- LinkedIn followers: 962 (+18)
+- GitHub dcrd stars: 575 (+5), forks: 249 (+2)
 
 ## Governance
 
