People add SM links

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -122,14 +122,14 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 Community stats as of Feb 1:
 
-- Twitter followers: 41,801 (+481)
-- Reddit subscribers: 10,201 (+150)
-- Matrix #general users: 344 (+57)
-- Discord users: 1,917 (+194)
-- Telegram users: 2,428 (+90)
-- YouTube subscribers: 4,320 (+20), views: 169K (+4K)
-- LinkedIn followers: 962 (+18)
-- GitHub dcrd stars: 575 (+5), forks: 249 (+2)
+- [Twitter](https://twitter.com/decredproject) followers: 41,801 (+481)
+- [Reddit](https://www.reddit.com/r/decred/) subscribers: 10,201 (+150)
+- [Matrix](https://chat.decred.org/) #general users: 344 (+57)
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,917 (+194)
+- [Telegram](https://t.me/Decred) users: 2,428 (+90)
+- [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,320 (+20), views: 169K (+4K)
+- [LinkedIn](https://www.linkedin.com/company/decredproject) followers: 962 (+18)
+- GitHub [dcrd](https://github.com/decred/dcrd) stars: 575 (+5), forks: 249 (+2)
 
 ## Governance
 
