--- a/journal/202101.md
+++ b/journal/202101.md
@@ -131,6 +131,16 @@ Community stats as of Feb 1:
 - [LinkedIn](https://www.linkedin.com/company/decredproject) followers: 962 (+18)
 - GitHub [dcrd](https://github.com/decred/dcrd) stars: 575 (+5), forks: 249 (+2)
 
+Some irregular changes among the tracked [stats](https://github.com/decredcommunity/social-media-stats):
+
+- [@decredproject](https://twitter.com/decredproject) Twitter had a second unusual move by almost +500 after a previous +400 (and 1.5 years of almost no changes before that)
+- Matrix chats got +20% and Discord +11% users
+- Telegram reversed after 6 months of decline and gained +4%
+- [DecredTrading](https://t.me/DecredTrading) Telegram got another +26%
+- [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) somehow added +8K watchers (+45%)
+- [@Checkmate](https://twitter.com/_Checkmatey_) got another +13% followers (to 4K) and posted 1K tweets (~34/day) _third_ month in a row
+- Russian [VK page](https://vk.com/decred_project) is posting updates again after a long period of inactivity, thank you someone
+
 ## Governance
 
 In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using January's daily average DCR/USD rate of ${n.dd}, this is ${n}K received and ${n}K spent. At December's average daily rate of ${n.dd}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.d} million USD at ${n.dd}).
