--- a/journal/202101.md
+++ b/journal/202101.md
@@ -6,6 +6,13 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
+## v1.6 Release
+
+{ links, verify binaries reminder, bold remind to set treasury vote prefs, bold remind to migrate to vspd }
+
+- https://voting.decred.org/
+- https://explorer.dcrdata.org/agenda/treasury
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -190,7 +197,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap }
 
-{ investment adoption }
+Early stage venture firm [Inflection](https://www.inflection.xyz/) closed their [second fund](https://twitter.com/alexlangevc/status/1346409341004509184) with DCR being one of the assets. Their homepage defines Decred as "Internet nation and governance platform".
 
 ## Outreach
 
@@ -268,6 +275,8 @@ In January DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. 
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
+American miner Marathon Patent Group joined DMG Blockchain Solutions to [create](https://www.marathonpg.com/news/press-releases/detail/1220/marathon-patent-group-and-dmg-blockchain-solutions-to-form) a "cooperative mining pool". To benefit the industry, the pool will include "clean block mining" proprietary tech that will "specifically omit any transactions deemed risky by Walletscore, and which may not meet OFAC standards". r/Bitcoin [discussed](https://www.reddit.com/r/Bitcoin/comments/kqyg0l/a_2nd_american_miner_marathon_patent_group_is/) possible countermeasures and claims made by the companies.
+
 { governance, funding, chain forks, community splits }
 
 { DEX }
@@ -275,6 +284,10 @@ In January DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. 
 { relevant exchanges and websites }
 
 { other: regulations, privacy, security, fun }
+
+Microblogging service Parler has tested a new level of censorship in January. Taking down of apps from Google and Apple stores was not surprising, but a quick deplatforming from third party 2FA/identity/database services and ultimately Amazon Web Services showed pretty much everything that can go wrong when centralized solutions are naively used to build a less censored environment. Hopefully developers and node operators can learn from this and prepare for such events in advance.
+
+Good news for censorship fighters, the [youtube-dl](https://github.com/ytdl-org/youtube-dl) repository that was taken down via RIAA's request, was restored after an impressive [push back](https://torrentfreak.com/riaas-youtube-dl-takedown-ticks-of-developers-and-githubs-ceo-201027/) involving creative ways to share censored code.
 
 ## About This Issue
 
