--- a/journal/202101.md
+++ b/journal/202101.md
@@ -18,6 +18,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 - https://voting.decred.org/
 - https://explorer.dcrdata.org/agenda/treasury
 
+{ 1.6.1 soon }
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -54,9 +56,22 @@ In progress:
 - VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores { better translation to User-English welcome, I didn't quite grasp the first design goal of 1956 }
 - narrow [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin { I got what this change does but now where it is used }
 
+The above changes were also backported to v1.6 release.
+
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- {}
+- added list of [unspent](https://github.com/decred/decrediton/pull/3098) outputs (UTXOs)
+- update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts and seed restores
+- show VSPs in [random](https://github.com/decred/decrediton/pull/3114) order
+- remove usage of [CSRF](https://github.com/decred/decrediton/pull/3133) tokens when communicating to Politeia, to prevent privacy leaks
+- [auto-detect](https://github.com/decred/decrediton/pull/3033) if the wallet used mixing in the past
+- UI hints for [RFP](https://github.com/decred/decrediton/pull/3118) proposals and submissions
+- updated translations
+- a few updates to Trezor support
+- more automated [UI tests](https://github.com/decred/decrediton/pull/2659)
+- ~24 bug fixes and 3 UI tweaks
+
+Most of the above changes were included in v1.6 release.
 
 **[Politeia](https://github.com/decred/politeia)**
 
