Dev dcrlnd, cspp

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -100,11 +100,7 @@ CMS:
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-- {}
-
-**[cspp](https://github.com/decred/cspp)**
-
-- {}
+- shutdown fixes and dependency updates
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
