--- a/journal/202101.md
+++ b/journal/202101.md
@@ -104,7 +104,20 @@ CMS:
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
-- {}
+Three key topics for January were to fix remaining issues for the [v0.1.4](https://github.com/decred/dcrdex/releases/tag/v0.1.4) patch (which was part of the collective v1.6 release), continue development towards the next v0.2 milestone, and manage the proposal for the next development phase.
+
+Merged work:
+
+- allow the user to [export and import](https://github.com/decred/dcrdex/pull/885) account data (primarily private keys)
+- support [switching](https://github.com/decred/dcrdex/pull/901) from unencrypted to an encrypted BTC wallet
+- client-side fee rate [limit](https://github.com/decred/dcrdex/pull/874)
+- created sample [config](https://github.com/decred/dcrdex/pull/927) files
+- validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning too high fee
+- fixed several issues with address validation, wallet locking, login, etc, and backported them to v0.1.4 release
+
+A total of 32 PRs from 7 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-01-01..2021-01-31+sort%3Aupdated-asc), adding 3K and deleting 1K lines of code.
+
+Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for a big picture plan of what's coming in the next 9 months. And congratulations to DCRDEX team with the stunning 98% Yes votes!
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
