Dev dcrandroid, dcrios, godcr

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -121,17 +121,25 @@ Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for 
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- CoinShuffle++ [mixing](https://github.com/planetdecred/dcrandroid/pull/520) support. When enabled, generating receiving addresses for the mixed account and sending funds from the change account are disabled.
+- privacy [UI pages](https://github.com/planetdecred/dcrandroid/pull/529): introduction, help popup, display of unmixed balance, CSPP server details, mixing progress, etc
+- Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503) support. Allows to list proposals, see their vote status, view a specific proposal and receive notifications on new proposals, vote start and finish.
+- debug page to view details about connected [peers](https://github.com/planetdecred/dcrandroid/pull/501)
+- option to create a [watch-only](https://github.com/planetdecred/dcrandroid/pull/530) wallet from the splash screen
+- more specific notifications for [ticket](https://github.com/planetdecred/dcrandroid/pull/531) vote and revocation transactions
 
-{ also check the base library https://github.com/planetdecred/dcrlibwallet }
+To enable the above features, mixing and Politeia support were added to the [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) base library and can be reused by dcrios and godcr.
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- {}
+- notify of [cfilters](https://github.com/planetdecred/dcrios/pull/728) fetching progress
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- app [Settings](https://github.com/planetdecred/godcr/pull/305) and [Wallet settings](https://github.com/planetdecred/godcr/pull/298) pages
+- new UI for [Sign message](https://github.com/planetdecred/godcr/pull/288) and [Verify message](https://github.com/planetdecred/godcr/pull/286) pages
+- UI for [Privacy](https://github.com/planetdecred/godcr/pull/293) page
+- CSPP [Setup](https://github.com/planetdecred/godcr/pull/303) UI and logic
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
