--- a/journal/202101.md
+++ b/journal/202101.md
@@ -143,7 +143,9 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-- {}
+- a more efficient streaming encoding of [CSV exports](https://github.com/decred/dcrdata/pull/1800)
+- reorganized [modules](https://github.com/decred/dcrdata/pull/1796) for v6 development cycle
+- display Swap Contract and Swap Redemption labels for [atomic swap](https://github.com/decred/dcrdata/pull/1733) transactions
 
 **[tinydecred](https://github.com/decred/tinydecred)**
 
